--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,4 @@
 <div>
+  <h1> My name is <%= ['Amigo', 'Misty', 'Almond'].sample %> </h1>
   <img style="border: dashed red 5px"; src="https://i.imgur.com/jFaSxym.png"/>
 </div>
