--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,6 @@
-<div>
+<% if @name %>
   <h1> My name is <%= @name %> </h1>
+<% end %>
+<div>
   <img style="border: dashed red 5px"; src="https://i.imgur.com/jFaSxym.png"/>
 </div>
