--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,9 @@
-<% if @name %>
+<% if @name.nil? %>
+  <form action="/named-cat">
+    <input type="text" name="name"/>
+    <input type="submit" value="Submit"/>
+  </form>
+<% else %>
   <h1> My name is <%= @name %> </h1>
 <% end %>
 <div>
