--- a/views/index.erb
+++ b/views/index.erb
@@ -1,9 +1,4 @@
-<% if @name.nil? %>
-  <form action="/named-cat">
-    <input type="text" name="name"/>
-    <input type="submit" value="Submit"/>
-  </form>
-<% else %>
+<% if @name %>
   <h1> My name is <%= @name %> </h1>
 <% end %>
 <div>
