Update readme file

--- a/views/cat_form.erb
+++ b/views/cat_form.erb
@@ -1,4 +1,5 @@
 <form action="/named-cat" method="post">
+  <label>Name:</label>
   <input type="text" name="name">
   <input type="submit" value="Submit">
 </form>
