Changed back to how it was when I finished the day yesterday with Samuel

--- a/views/index.erb
+++ b/views/index.erb
@@ -2,5 +2,5 @@
   <h1> My name is <%= @name %> </h1>
 <% end %>
 <div>
-  <img style="border: dashed red 5px"; src="https://i.imgur.com/jFaSxym.png" alt="Cat image surrounded by a dashed red border"/>
+  <img style="border: dashed red 5px"; src="https://i.imgur.com/jFaSxym.png"
 </div>
